<resources>
    <string name="app_name">Class C</string>
    <string name="lets_count_together">Lets Count Together</string>
    <string name="count">COUNT</string>
    <string name="welcome_to_our_restaurant">Welcome to our Restaurant</string>
    <string name="which_kind_of_burger_you_need_to_order">Which kind of burger you need to order?!</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="shrimp">Shrimp</string>
    <string name="whick_extras_you_want_to_add">Whick Extras you want to add ?!</string>
    <string name="cheese">Cheese</string>
    <string name="salad">Salad</string>
    <string name="onions">Onions</string>
    <string name="order">Order</string>
    <string name="dummy_text_for_total_order">dummy text for total order</string>
    <string name="app_logo">App Logo</string>
    <string name="bull_s_rent">Bull\'s</string>
    <string name="rent">Rent</string>
    <string name="nation_wide_car_rental_app">Nation wide car rental app</string>
    <string name="hello_there">HELLO THERE,</string>
    <string name="welcome_back">WELCOME BACK</string>
    <string name="sign_in_to_continuo">Sign in to continuo</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="remember_me">Remember Me</string>
    <string name="forget_password">Forget Password?</string>
    <string name="go">GO</string>
    <string name="new_user_sign_up">NEW USER? SIGN UP</string>
    <string name="welcome">WELCOME,</string>
    <string name="signup_to_start_your_new_journey">SignUp to start your new journey</string>
    <string name="fullname">FullName</string>
    <string name="email">ieslammedhat@gmail.com</string>
    <string name="phone_no">Phone No</string>
    <string name="already_have_an_account_login">ALREADY HAVE AN ACCOUNT? LOGIN</string>
    <string name="add">Add</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="eslam_medhat">Eslam Medhat</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="stared">Stared</string>
    <string name="log_out">Log out</string>
    <string name="archive">Archive</string>
    <string name="inbox_fragment">Inbox Fragment</string>
    <string name="send_fragment">Send Fragment</string>
    <string name="starred_fragment">Starred Fragment</string>
    <string name="archive_fragment">Archive Fragment</string>
    <string name="todolist">TodoList</string>
    <string name="restaurant">Restaurant</string>
    <string name="counter">Counter</string>
    <string name="calculator">Calculator</string>
    <string name="enter_first_number">Enter First Number</string>
    <string name="enter_second_number">Enter Second Number</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">*</string>
    <string name="division">/</string>
    <string name="dummy_result">Dummy Result</string>
    <string name="reset_values">Reset Values</string>
    <string name="dummy_text">Dummy Text</string>
    <string name="itemname">ItemName</string>
    <string name="item_amount">Item Amount</string>
    <string name="add_new_item">Add New Item</string>
    <string name="add_item_name">add item name</string>
    <string name="enter_amount">enter amount</string>
    <string name="cancel">Cancel</string>
    <string name="amount">amount</string>
    <string name="dummy_todo">Dummy Todo</string>
    <string name="characterphoto">CharacterPhoto</string>
    <string name="characterimage">CharacterImage</string>
    <string name="fragment_character_image">Fragment Character Image</string>
    <string name="todolistapi">TodoListApi</string>
    <string name="shoppinglistitem">ShoppingListItem</string>
    <string name="clothesapp">ClothesApp</string>
    <string name="pushnotification_app">PushNotification APP</string>
    <string name="breaking_bad_api">Breaking Bad Api</string>
    <string name="bulls_car">Bulls Car</string>
    <string name="todolist_and_calculator">TodoList and Calculator</string>
    <string name="email_address">Email Address</string>
    <string name="firstname">First Name</string>
    <string name="new_first_name">New First Name</string>
    <string name="last_name">Last Name</string>
    <string name="new_last_name">New Last Name</string>
    <string name="age">Age</string>
    <string name="new_age">New Age</string>
    <string name="save">SAVE</string>
    <string name="retrieve">Retrieve</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="upload_image">Upload Image</string>
    <string name="download_image">Download Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="bullscar">BullsCar</string>
    <string name="navigation_drawer">Navigation Drawer</string>

</resources>