<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/_20sdp"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFirstNumber"
        android:inputType="number"
        android:hint="@string/enter_first_number"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etSecondNumber"
        android:layout_marginTop="@dimen/_20sdp"
        android:inputType="number"
        android:hint="@string/enter_second_number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/_10sdp">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/plus"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/black"
            android:id="@+id/btnAddition"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/black"
            android:id="@+id/btnMinus"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/multiplication"
            android:layout_marginEnd="@dimen/_10sdp"
            android:textColor="@color/black"
            android:id="@+id/btnMultiplication"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:textColor="@color/black"
            android:id="@+id/btnDivision"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/dummy_result"
        android:textSize="@dimen/_32sdp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:fontFamily="@font/koulenregular"
        android:id="@+id/tvValueResult"/>
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/reset_values"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_40sdp"
        android:textColor="@color/black"
        android:id="@+id/btnReset"/>
</LinearLayout>