<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etOldFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:hint="@string/firstname"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etNewFirstName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:hint="@string/new_first_name"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etOldLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etNewLastName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:hint="@string/new_last_name"
            android:inputType="textPersonName" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etOldAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:hint="@string/age"
            android:inputType="number" />

        <EditText
            android:id="@+id/etNewAge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:hint="@string/new_age"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSaveProfileDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="@string/save" />

        <Button
            android:id="@+id/btnRetrieveProfileDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="@string/retrieve" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnUpdateProfileDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="@string/update" />

        <Button
            android:id="@+id/btnDeleteProfileDetails"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/_5sdp"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp">

        <TextView
            android:id="@+id/tvShowProfileDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dummy_text"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />
    </ScrollView>
</LinearLayout>