<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/_200sdp"
    android:layout_height="wrap_content"
    android:background="#ECECEC"
    android:padding="@dimen/_5sdp">

    <EditText
        android:id="@+id/etShoppingItemDialogName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:hint="@string/add_item_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/etShoppingItemDialogAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />


    <EditText
        android:id="@+id/etShoppingItemDialogAmount"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="wrap_content"
        android:ems="10"

        android:hint="@string/amount"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etShoppingItemDialogName" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_new_item"
        android:textColor="@color/black"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnShoppingDialogCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnShoppingDialogAdd"
        app:layout_constraintTop_toBottomOf="@+id/etShoppingItemDialogName" />

    <Button
        android:id="@+id/btnShoppingDialogAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etShoppingItemDialogAmount" />
</androidx.constraintlayout.widget.ConstraintLayout>